[package]
name = "colorlyne"
version = "0.1.0"
authors = ["0xadd1e"]
edition = "2018"
description = "A simple statusline with git support"
license = "MIT"
repository = "https://github.com/0xADD1E/ColorLyne"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorful = "0.2"
failure = "0.1"
git2 = "0.9"
base64 = "0.10"
